# techniques_de_test_2025_2026_Nabil_KHOUALED

./: .coverage  .gitignore  Makefile  PLAN.md  README.md  RETEX.md  SUJET.md  dev_requirements.txt  point_set_manager.yml  pyproject.toml  requirements.txt  triangulator.yml
TP/: PLAN.md
tests/: __init__.py
tests/integration/: test_api.py
tests/perf/: test_performance.py
tests/unit/: test_binary.py  test_triangulation.py
triangulator/: __init__.py  app.py  binary.py  triangulator.py
